# EtherCurve

./: .travis.yml  CMakeLists.txt  CoolToWarm.csv  DeviceList.cpp  DeviceList.h  EtherCurve.cpp  EtherVis.cc  EtherVis.cpp  FindPCAP.cmake  LICENCE  MainWindow.cc  MainWindow.cpp  MainWindow.h  MainWindow.hh  PCAPWrapper.cc  PCAPWrapper.cpp  PCAPWrapper.h  PCAPWrapper.hh  PacketRenderer.cpp  PacketRenderer.h  Qualitative1.csv  Qualitative2.csv  README.md
