CMAKE_MINIMUM_REQUIRED( VERSION 2.8.9 )
PROJECT( EtherVis )

IF( CMAKE_COMPILER_IS_GNUCXX )
  SET( CMAKE_CXX_FLAGS "-Werror -Wall -pedantic -std=c++0x" )
ENDIF()

SET( CMAKE_MODULE_PATH
  ${CMAKE_MODULE_PATH}
  ${CMAKE_SOURCE_DIR}
)

SET( CMAKE_INCLUDE_CURRENT_DIR ON )
SET( CMAKE_AUTOMOC ON )

FIND_PACKAGE( Qt5Widgets REQUIRED )
FIND_PACKAGE( PCAP REQUIRED )

SET( SOURCES
  DeviceList.cpp
  EtherVis.cpp
  MainWindow.cpp
  PacketRenderer.cpp
  PCAPWrapper.cpp
)

ADD_EXECUTABLE( ethervis ${SOURCES} )

QT5_USE_MODULES( ethervis Core )
QT5_USE_MODULES( ethervis Gui )
QT5_USE_MODULES( ethervis Widgets )

TARGET_LINK_LIBRARIES(
  ethervis
  ${PCAP_LIBRARIES}
)
